Atualização do Site

--- a/src/main/resources/templates/cargos/list.html
+++ b/src/main/resources/templates/cargos/list.html
@@ -55,13 +55,13 @@
 	</nav>
 
 	<div id="main" class="container-fluid" style="margin-top: 60px">
-		<form method="get" class="form-horizontal">
+		<form method="post" class="form-horizontal" action="/cargos/filtro">
 			<div class="form-group">
 				<div class="col-sm-5">
 					<div class="input-group">
 						<input class="form-control" placeholder="Informe o nome do cargo" autofocus="autofocus" name="descricao"></input>
 						<span class="input-group-btn">
-							<button type="submit" class="btn btn-success">
+							<button type="submit" class="btn btn-success" >
 								<i class="glyphicon glyphicon-search"></i>
 							</button>
 						</span> 
