--- a/src/main/resources/templates/equipamentos/list.html
+++ b/src/main/resources/templates/equipamentos/list.html
@@ -51,7 +51,7 @@
 	</nav>
 
 	<div id="main" class="container-fluid" style="margin-top: 60px">
-		<form method="get" class="form-horizontal">
+		<form method="post" class="form-horizontal" action="/equipamentos/filtro">
 			<div class="form-group">
 				<div class="col-sm-5">
 					<div class="input-group">
