--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,7 +41,7 @@
 	            <li><a th:href="@{/funcionarios}">Funcionários</a></li>
 	            <li><a th:href="@{/setores}">Setores</a></li>
 	            <li class="divider"></li>
-	            <li><a href="#"><span class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span>Usuários</a></li>
+	            <li><a th:href="@{/usuarios}"><span class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span>Usuários</a></li>
 	            
 	          </ul>
 	        </li>          
