--- a/src/main/resources/templates/setores/list.html
+++ b/src/main/resources/templates/setores/list.html
@@ -56,7 +56,7 @@
 
 	<div id="main" class="container-fluid" style="margin-top: 60px">
 	
-		<form method="get" class="form-horizontal">
+		<form method="post" class="form-horizontal" action="/setores/filtro">
 			<div class="form-group">
 				<div class="col-sm-5">
 					<div class="input-group">
