--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -49,7 +49,7 @@
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ordem de Serviços <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-wrench"></span></a>
 	          <ul class="dropdown-menu forAnimate" role="menu">
 	            <li><a href="#">Abertura de O.S.</a></li>
-	            <li><a href="#">Encerramento de O.S.</a></li>
+	            <li><a th:href="@{/ordemServicos/baixar-os}">Encerramento de O.S.</a></li>
 	          </ul>
 	        </li>     
 	        <li class="dropdown">
