--- a/src/main/resources/templates/ordem-servicos/baixar-os.html
+++ b/src/main/resources/templates/ordem-servicos/baixar-os.html
@@ -89,7 +89,7 @@
 			<div class="row">
 				<div class="col-md-12">
 						<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>  Pesquisar</button>
-						<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>  Imprimir Relatório</span></button>
+						<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>  Imprimir Relatório</button>
 						<a th:href="@{/}" class="btn btn-danger"><span class="glyphicon glyphicon-off" aria-hidden="true"></span>  Cancelar</a>
 				</div>
 			</div>
