--- a/src/main/resources/templates/setores/list.html
+++ b/src/main/resources/templates/setores/list.html
@@ -56,7 +56,7 @@
 
 	<div id="main" class="container-fluid" style="margin-top: 60px">
 	
-		<form method="post" class="form-horizontal" action="/setores/filtro">
+		<form method="post" class="form-horizontal" action="/setores/filtro" id="formBotoes">
 			<div class="form-group">
 				<div class="col-sm-5">
 					<div class="input-group">
@@ -65,12 +65,12 @@
 							<button type="submit" class="btn btn-success">
 								<i class="glyphicon glyphicon-search"></i>
 							</button>
-						</span> 	
+						</span> 
 						<span class="input-group-btn">
-							<button type="submit" class="btn btn-primary">
+							<button type="submit" class="btn btn-primary" onclick="document.getElementById('formBotoes').method='get'">
 								<i class="glyphicon glyphicon-print"></i>
 							</button>
-						</span> 						
+						</span> 							
 					</div>			
 				</div>
 			</div>
