--- a/src/main/resources/templates/cargos/form.html
+++ b/src/main/resources/templates/cargos/form.html
@@ -1,70 +1,77 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
- 
-    <title>CEE System - Controle de Equipamentos Eletrônicos</title>
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/3.4.1/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/3.4.1/css/bootstrap-theme.min.css}">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" th:href="@{/css/confirm-dialog.css}"/> 
- 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" >
- 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
- 		
- 	<script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script> 
- 	<script type="text/javascript" th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
- 	<script type="text/javascript" th:src="@{/js/script.js}"></script>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>CEE System</title>
+
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}" />
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap-theme.min.css}" />
+<link rel="stylesheet" th:href="@{/css/confirm-dialog.css}" />
+<link rel="stylesheet" th:href="@{/css/estilo.css}" />
+
+<script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
+
 </head>
 <body>
-	 
-	    <nav class="navbar navbar-default sidebar" role="navigation">
-	    <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>      
-	    </div>
-	    <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li class="active"><a th:href="@{/}">Página Inicial<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cadastros <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-hdd"></span></a>
-	          <ul class="dropdown-menu forAnimate" role="menu">
-	            <li><a th:href="@{/cargos}">Cargos</a></li>
-	            <li><a th:href="@{/cidades}">Cidades</a></li>
-	            <li><a th:href="@{/equipamentos}">Equipamentos</a></li>
-	            <li><a th:href="@{/funcionarios}">Funcionários</a></li>
-	            <li><a th:href="@{/setores}">Setores</a></li>
-	            <li class="divider"></li>
-	            <li><a th:href="@{/usuarios}"><span class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span>Usuários</a></li>
-	            
-	          </ul>
-	        </li>          
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ordem de Serviços <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-wrench"></span></a>
-	          <ul class="dropdown-menu forAnimate" role="menu">
-	            <li><a href="#">Abertura de O.S.</a></li>
-	            <li><a href="#">Encerramento de O.S.</a></li>
-	          </ul>
-	        </li>     
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Empréstimos<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-copy"></span></a>
-	          <ul class="dropdown-menu forAnimate" role="menu">
-	            <li><a href="#">Empréstimo de Equip.</a></li>
-	            <li><a href="#">Devolução de Equip.</a></li>
-	          </ul>
-	        </li>     
-	      </ul>
-	    </div>
-	  </div>
+
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span> 
+					<span class="icon-bar"></span> 
+					<span class="icon-bar"></span> 
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" th:href="@{/}">CEE System</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Cadastros <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a th:href="@{/cargos}">Cargos</a></li>
+							<li><a th:href="@{/cidades}">Cidades</a></li>
+							<li><a th:href="@{/equipamentos}">Equipamentos</a></li>
+							<li><a th:href="@{/funcionarios}">Funcionários</a></li>
+							<li><a th:href="@{/setores}">Setores</a></li>
+							<li class="divider"></li>
+	            			<li><a th:href="@{/usuarios}"><span class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span>Usuários</a></li>
+							
+						</ul>
+					</li>
+					
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Ordem de Serviços <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Abertura de O.S.</a></li> 
+	            			<li><a th:href="@{/ordemServicos/baixar-os}">Encerramento de O.S.</a></li>
+							
+						</ul>
+					</li>
+					
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Empréstimos <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Empréstimo de Equip.</a></li> 
+	            			<li><a href="#">Devolução de Equip.</a></li>
+							
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
 	</nav>
 
-	<div class="container-fluid" style="margin-top: 40px">
+	<div class="container-fluid" style="margin-top: 60px">
 		<div class="panel panel-default">
 	  <div class="panel-heading">
 	    <h3 class="panel-title"><strong><span th:text="${tituloForm}"></span></strong></h3>
