--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,6 @@
     <title>CEE System - Controle de Equipamentos Eletrônicos</title>
     <link rel="stylesheet" th:href="@{webjars/bootstrap/3.4.1/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{webjars/bootstrap/3.4.1/css/bootstrap-theme.min.css}">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" th:href="@{/css/confirm-dialog.css}"/> 
  	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" >
  	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -18,53 +17,62 @@
  	<script type="text/javascript" th:src="@{/js/script.js}"></script>
 </head>
 <body>
-	 
-	    <nav class="navbar navbar-default sidebar" role="navigation">
-	    <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>      
-	    </div>
-	    <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li class="active"><a th:href="@{/}">Página Inicial<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cadastros <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-hdd"></span></a>
-	          <ul class="dropdown-menu forAnimate" role="menu">
-	            <li><a th:href="@{/cargos}">Cargos</a></li>
-	            <li><a th:href="@{/cidades}">Cidades</a></li>
-	            <li><a th:href="@{/equipamentos}">Equipamentos</a></li>
-	            <li><a th:href="@{/funcionarios}">Funcionários</a></li>
-	            <li><a th:href="@{/setores}">Setores</a></li>
-	            <li class="divider"></li>
-	            <li><a th:href="@{/usuarios}"><span class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span>Usuários</a></li>
-	            
-	          </ul>
-	        </li>          
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ordem de Serviços <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-wrench"></span></a>
-	          <ul class="dropdown-menu forAnimate" role="menu">
-	            <li><a href="#">Abertura de O.S.</a></li>
-	            <li><a th:href="@{/ordemServicos/baixar-os}">Encerramento de O.S.</a></li>
-	          </ul>
-	        </li>     
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Empréstimos<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-copy"></span></a>
-	          <ul class="dropdown-menu forAnimate" role="menu">
-	            <li><a href="#">Empréstimo de Equip.</a></li>
-	            <li><a href="#">Devolução de Equip.</a></li>
-	          </ul>
-	        </li>     
-	      </ul>
-	    </div>
-	  </div>
+
+
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span> 
+					<span class="icon-bar"></span> 
+					<span class="icon-bar"></span> 
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" th:href="@{/}">CEE System</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Cadastros <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a th:href="@{/cargos}">Cargos</a></li>
+							<li><a th:href="@{/cidades}">Cidades</a></li>
+							<li><a th:href="@{/equipamentos}">Equipamentos</a></li>
+							<li><a th:href="@{/funcionarios}">Funcionários</a></li>
+							<li><a th:href="@{/setores}">Setores</a></li>
+							<li class="divider"></li>
+	            			<li><a th:href="@{/usuarios}"><span class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span>Usuários</a></li>
+							
+						</ul>
+					</li>
+					
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Ordem de Serviços <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Abertura de O.S.</a></li> 
+	            			<li><a th:href="@{/ordemServicos/baixar-os}">Encerramento de O.S.</a></li>
+							
+						</ul>
+					</li>
+					
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Empréstimos <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Empréstimo de Equip.</a></li> 
+	            			<li><a href="#">Devolução de Equip.</a></li>
+							
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
 	</nav>
     
-    <div class="main">     
+    <div class="main" style="padding-top: 60px">     
         
         <div class="content">
             <div class="container-fluid">
