--- a/src/main/resources/templates/cargos/list.html
+++ b/src/main/resources/templates/cargos/list.html
@@ -12,10 +12,6 @@
 <link rel="stylesheet" th:href="@{/css/confirm-dialog.css}" />
 <link rel="stylesheet" th:href="@{/css/estilo.css}" />
 
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round"> -->
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-
 <script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
 
@@ -36,17 +32,38 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-					<li><a href="#">Link</a></li>
 					<li class="dropdown"><a class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">Cadastros <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a th:href="@{/cargos}">Cargos</a></li>
-							<li><a href="#">Cidades</a></li>
-							<li><a href="#">Colaboradores</a></li>
-							<li><a href="#">Equipamentos</a></li>
-							<li><a href="#">Setores</a></li>
+							<li><a th:href="@{/cidades}">Cidades</a></li>
+							<li><a th:href="@{/equipamentos}">Equipamentos</a></li>
+							<li><a th:href="@{/funcionarios}">Funcionários</a></li>
+							<li><a th:href="@{/setores}">Setores</a></li>
+							<li class="divider"></li>
+	            			<li><a th:href="@{/usuarios}"><span class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span>Usuários</a></li>
+							
+						</ul>
+					</li>
+					
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Ordem de Serviços <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Abertura de O.S.</a></li> 
+	            			<li><a th:href="@{/ordemServicos/baixar-os}">Encerramento de O.S.</a></li>
+							
+						</ul>
+					</li>
+					
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Empréstimos <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Empréstimo de Equip.</a></li> 
+	            			<li><a href="#">Devolução de Equip.</a></li>
+							
 						</ul>
 					</li>
 				</ul>
@@ -65,12 +82,7 @@
 								<i class="glyphicon glyphicon-search"></i>
 							</button>
 						</span> 
-						<span class="input-group-btn">
-							<button type="submit" class="btn btn-primary">
-								<i class="glyphicon glyphicon-print"></i>
-							</button>
-						</span> 
-					</div>
+					</div>					
 				</div>
 			</div>
 		</form>
@@ -131,6 +143,15 @@
 					</tr>
 				</tbody>
 			</table>
+			<form method="post" class="form-horizontal" action="/cargos/imprimir">
+				<div class="form-group">
+					<div class="col-sm-2">
+						<button type="submit" class="btn btn-primary">Imprimir Lista
+							<i class="glyphicon glyphicon-search"></i>
+						</button>
+					</div>
+				</div>		
+			</form>
 		</div>	
 	</div>
 	</div>
