Correção de Telas e Inclusão de relatórios

--- a/src/main/resources/templates/cargos/list.html
+++ b/src/main/resources/templates/cargos/list.html
@@ -147,7 +147,7 @@
 				<div class="form-group">
 					<div class="col-sm-2">
 						<button type="submit" class="btn btn-primary">Imprimir Lista
-							<i class="glyphicon glyphicon-search"></i>
+							<i class="glyphicon glyphicon-print"></i>
 						</button>
 					</div>
 				</div>		
