--- a/src/main/resources/templates/funcionarios/list.html
+++ b/src/main/resources/templates/funcionarios/list.html
@@ -82,11 +82,6 @@
 								<i class="glyphicon glyphicon-search"></i>
 							</button>
 						</span> 
-						<span class="input-group-btn">
-							<button type="submit" class="btn btn-primary">
-								<i class="glyphicon glyphicon-print"></i>
-							</button>
-						</span> 
 					</div>
 				</div>
 			</div>
@@ -152,6 +147,15 @@
 					</tr>
 				</tbody>
 			</table>
+			<form method="post" class="form-horizontal" action="/funcionarios/imprimir">
+				<div class="form-group">
+					<div class="col-sm-2">
+						<button type="submit" class="btn btn-primary">Imprimir Lista
+							<i class="glyphicon glyphicon-print"></i>
+						</button>
+					</div>
+				</div>		
+			</form>
 		</div>	
 	</div>
 	</div>
