--- a/src/main/resources/templates/layout/Layout.html
+++ b/src/main/resources/templates/layout/Layout.html
@@ -1,33 +1,134 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" 
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"	>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
- 
-    <title>CEE System - Controle de Equipamentos Eletrônicos</title>
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/3.4.1/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/3.4.1/css/bootstrap-theme.min.css}">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" th:href="@{/css/confirm-dialog.css}"/> 
- 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" >
- 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
- 		
- 	<script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script> 
- 	<script type="text/javascript" th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
- 	<script type="text/javascript" th:src="@{/js/script.js}"></script>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>CEE System - Controle de Equipamentos Eletrônicos</title>
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}" />
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap-theme.min.css}" />
+<link rel="stylesheet" th:href="@{/css/confirm-dialog.css}" />
+<link rel="stylesheet" th:href="@{/css/estilo.css}" />
+<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}" />
+
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<script th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/script.js}"></script>
+<script th:src="@{/js/jquery-ui.min.js}"></script>
+<script th:src="@{/js/jquery.mask.js}"></script>
+
+<script type="text/javascript">
+	$(document).ready(function() {
+		$('#cep').mask('00000-000');
+		$('#cpf').mask('000.000.000-00');
+		$('#celular').mask('(00) 00000-0000');
+		$('#telefone').mask('(00) 0000-0000');
+	})
+</script>
+
+<script type="text/javascript">
+    $(function(){
+    	$("#buscar_equipamentos").autocomplete({
+    		minLenght: 2, 
+    		source : function(request, response) {
+				$.ajax({
+					url : "/equipamentos/buscar/" + request.term,
+					dataType : "json",
+					data : {
+						term : request.term
+					},
+					success : function(data) {
+						response($.map(data, function(item) {
+							return {
+								value : item.id,
+								label : item.nome,
+								serie : item.numeroSerie,
+							};
+						}));
+					},
+				});
+			},
+    		select: function(event, ui){
+    			this.value = ui.item.value, 
+    			$("#buscar_equipamentos").val(ui.item.label);
+    			return false;
+    		}
+    	});
+    });
+  </script>	
+
 </head>
 <body>
 
-	<div class="corpo">
-		corpo da pagina
-	</div>
+	<header th:fragment="header">
 
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+						aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" th:href="@{/}">CEE System</a>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="dropdown"><a class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Cadastros <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a th:href="@{/cargos}">Cargos</a></li>
+								<li><a th:href="@{/cidades}">Cidades</a></li>
+								<li><a th:href="@{/equipamentos}">Equipamentos</a></li>
+								<li><a th:href="@{/funcionarios}">Funcionários</a></li>
+								<li><a th:href="@{/setores}">Setores</a></li>
+								<li class="divider"></li>
+								<li><a th:href="@{/usuarios}"><span
+										class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span>Usuários</a></li>
 
-	<div class="rodape">
-		
-	</div>
+							</ul></li>
+
+						<li class="dropdown"><a class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Ordem de Serviços <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a th:href="@{/ordemServicos/abertura-os}">Abertura
+										de O.S.</a></li>
+								<li><a th:href="@{/ordemServicos/baixar-os}">Encerramento
+										de O.S.</a></li>
+
+							</ul></li>
+
+						<li class="dropdown"><a class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Empréstimos <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">Empréstimo de Equip.</a></li>
+								<li><a href="#">Devolução de Equip.</a></li>
+
+							</ul></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+	</header>
+
+	<div class="content"></div>
+
+	<footer th:fragment="footer" class="content">
+		<div class="container-fluid">
+			<div th:fragment="rodape">&copy; 2020 CEE System - Controle de Equipamentos Eletrônicos</div>
+		</div>
+	</footer>
 </body>
 </html>
